# 3d-engine

./: Cargo.toml  README.md
src/: algebra.rs  camera.rs  libs.rs  load.rs  main.rs  render.rs  shader.wgsl  shaders.wgsl  types.rs
src/libs/: texture.rs
