[package]
name = "webgpu-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29.0"
env_logger = "0.10"
log = "0.4" 
wgpu = "22.0"
cfg-if = "1.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
image = "0.24"
anyhow = "1.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
 

[libs]
crate-type = ["cdylib", "rlib"]
